--- a/main.css
+++ b/main.css
@@ -10,3 +10,4 @@ div {
   border-bottom-color: transparent; /* and the bottom of the circle */
 }
 #red { border-top-color: #f00;}
+#orange { border-top-color: #f00;}
