--- a/main.css
+++ b/main.css
@@ -14,3 +14,5 @@ div {
 #yellow { border-top-color: #ff0;}
 #green { border-top-color: #00bc3f;}
 #blue { border-top-color: #06f;}
+#indigo { border-top-color: #8a2be2;}
+#orange { border-top-color: #ffa500;}
