--- a/main.css
+++ b/main.css
@@ -15,4 +15,4 @@ div {
 #green { border-top-color: #00bc3f;}
 #blue { border-top-color: #06f;}
 #indigo { border-top-color: #8a2be2;}
-# { border-top-color: #ffa500;}
+#violet { border-top-color: #d300c9;}
